# kanalyze

./: .gitignore  CHANGELOG.md  README.md  kanalyze.cabal
kparser/: KParser.hs  KotlinAST.hs
kparser-test/: KParserSpec.hs
res/: ComposeSample.kt  KotlinExpressions.kt
