cabal-version:      2.4
name:               kanalyze
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             iliyangermanov
maintainer:         iliyan.germanov971@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library kparser
  exposed-modules:     KParser
  hs-source-dirs:      kparser
  build-depends:       base,
                       parsec
  default-language:    Haskell2010

test-suite kparser-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   kparser-test
  main-is:          Spec.hs
  other-modules:    KParserSpec
  build-depends:    base
                    , kparser
                    , hspec
  default-language: Haskell2010

executable kanalyze
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      kparser
    hs-source-dirs:   app
    default-language: Haskell2010
